@@ -438,6 +438,8 @@ Release 2.3.0 - UNRELEASED
     HDFS-5582. hdfs getconf -excludeFile or -includeFile always failed (sathish
     via cmccabe)
 
+    HDFS-5671. Fix socket leak in DFSInputStream#getBlockReader. (JamesLi via umamahesh) 
+
 Release 2.2.0 - 2013-10-13
 
   INCOMPATIBLE CHANGES
